add download document endpoint
